--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
         padding: 0;
         width: 180px;
       }
+      /* Increased ship name font-size and rounded all corners */
       .mapboxgl-popup-content h3 {
         margin: 0;
         padding: 10px;
-        border-radius: 3px 3px 0 0;
+        border-radius: 3px; /* Rounds all four corners */
         font-weight: 700;
         margin-top: -15px;
+        font-size: 16px; /* Ship name is now a bit larger */
       }
+      /* Make the country text smaller */
       .popup-header-country {
         display: block;
-        font-size: 11px;
+        font-size: 9px;
         opacity: 0.9;
       }
       .mapboxgl-popup-content div {
@@ -351,3 +354,4 @@
     </script>
   </body>
 </html>
+
