--- a/index.html
+++ b/index.html
@@ -51,13 +51,11 @@
         position: absolute;
         top: 10px;
         right: 10px;
-        background: #262828;
+        /* Background removed */
         padding: 10px;
         border-radius: 4px;
-        font-family: "DIN Pro Regular", sans-serif;
+        font-family: "Source Sans Pro", sans-serif;
         font-size: 12px;
-        box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-        z-index: 1;
         color: #ffffff;
         transition: opacity 0.3s ease-out;
       }
